# compliance-doc-assistant

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LEDGER.md  PM_PROTOCOL.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260712_0001_enable_pgvector_extension.py  2514bcabb082_add_answer_review_fields_and_review_.py  2c405e260c9f_add_answer_and_answer_citation_tables.py  31f0f34ecbbb_add_document_and_chunk_tables.py  6313845d38d0_add_question_table.py  7cd10a4ac549_add_user_and_auth_session_tables.py  95e628ecde59_add_chunk_embedding_column_and_hnsw_.py
docker/: init-test-db.sql
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AnswerCard.tsx  AskQuestionForm.tsx  DocumentUploadForm.tsx  NavBar.tsx  RequireAuth.tsx  StatusBadge.tsx
frontend/lib/: api.ts  auth-context.tsx  types.ts
ollama_smoke_test/: test_ollama_smoke.py
pgvector_smoke_test/: test_pgvector_smoke.py
src/compliance_doc_assistant/: auth.py  chunking.py  confidence.py  database.py  embeddings.py  generation.py  ingestion.py  main.py  models.py  retrieval.py  review.py  seed.py
tests/: conftest.py  pdf_fixtures.py  test_auth.py  test_chunking.py  test_confidence.py  test_database.py  test_documents.py  test_generation.py  test_health.py  test_ingestion.py  test_questions.py  test_retrieval.py  test_review.py  test_review_router.py
(+5 files in other folders)
